fix: github alignment

--- a/frontend/app/public/styles/styles.css
+++ b/frontend/app/public/styles/styles.css
@@ -91,6 +91,9 @@ form {
 
 .button {
     position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: max-content;
     justify-self: flex-end;
 }
